--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>justVegetables</title>
 </head>
 <body>
-    <div id="root"></div>
+    <p>buongiorno</p>
+    <div id="root">addio</div>
 </body>
 </html>
