--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
     <title>justVegetables</title>
 </head>
 <body>
-    <p>buongiorno</p>
-    <div id="root">addio</div>
+    <div id="root"></div>
 </body>
 </html>
